add accessibility info

--- a/content/practical/accessibility.html
+++ b/content/practical/accessibility.html
@@ -16,6 +16,18 @@ title: Accessibility
   Wheelchair accessible routes and toilets can be found through <a href='https://nav.fosdem.org'>nav.fosdem.org</a> (hint: search for "wheelchair" and use the "avoid stairs" navigation setting). All rooms apart from the upper rooms in AW are weelchair accessible. A static map of the campus is available <a href="https://www.ulb.be/fr/accessibilite-pour-tous/amenagements-specifiques">here</a>.
 </p>
 
+<p>
+  Licensed guide dogs for the blind only are allowed on campus.
+</p>
+
+<p>
+  Front seating for those with hearing or sight challenges is available on a best effort basis.
+</p>
+
+<p>
+  We realise some people on the autism spectrum might need some quiet time. While we cannot offer that on campus, we suggest <a href='https://www.openstreetmap.org/way/150213167'>Bois de La Cambre/Terkamerenbos</a>, only a five minute walk away.
+</p>
+
 <h3>Suggestions welcome</h3>
 <p>
   We welcome your ideas for improving accessibility at FOSDEM. Please
