--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -51,7 +51,7 @@ aliases: /sightseeing
 </p>
 
 <p>
-<b>The Sunday tour</b> starts at 12:30. We'll discover the royal quarter and the <a href="https://en.wikipedia.org/wiki/Palace_of_Coudenberg">Coudenbergh palace</a>, possibly interrupted by a short coffee break.
+<b>The Sunday tour</b> starts at 12:30. We'll discover the Marolles/Marollen quarter and get a guided tour of the <a href="https://www.artetmarges.be/en/musee.html">Art&Marges museum</a>.
   We expect to be back at ULB at 16:30 approximately.
 <div class="container-fluid">
 <div class="row-fluid">
@@ -104,7 +104,7 @@ aliases: /sightseeing
 
 <p>
   Participation is free but places are limited &lt;30, and you <b>must register</b> beforehand.  Please send an e-mail to
-  <a href="mailto:tour@fosdem.org">tour@fosdem.org</a> with an e-mail and phonenumber where you are reachable during FOSDEM to register for these
+  <a href="mailto:tour@fosdem.org">tour@fosdem.org</a> with an e-mail and phone number where you are reachable during FOSDEM to register for these
   tours, and specify if you are willing to join the tour on Saturday, Sunday, or both.
 </p>
 
