Upgrade some links to https

--- a/content/fringe.html
+++ b/content/fringe.html
@@ -39,7 +39,7 @@ fringe = pretalx_data.fetch('fringe', {})
 </table>
 
 <p>
-  <a href="http://www.fosdem.org/fringe">Add your event</a>.
+  <a href="https://www.fosdem.org/fringe">Add your event</a>.
 </p>
 
 <p><em>
