--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -101,7 +101,7 @@ sponsors_under_navigation: true
 <p>From <strong>Etterbeek</strong> station (about <strong>20 minutes</strong> walking):
 <ul style="margin-top:0">
 <li><a href="https://www.google.com/maps/dir/?api=1&origin=50.822252,4.389511&destination=50.813771,4.384219&travelmode=walking">directions from ULB/FOSDEM to the Etterbeek train station</a></li>
-<li><a href="http://www.belgianrail.be/jp/nmbs-realtime/stboard.exe/en?input=8811411&boardType=dep&time=18:30-60&date=<%= days.last[:conference_day].strftime('%d/%m/%Y') %>&start=yes">timetable for Etterbeek to Bruxelles midi on Sunday at 18:30</a>, takes 25min to Brussels South station, only a train every hour</li></ul></p>
+<li><a href="https://www.belgianrail.be/jp/nmbs-realtime/stboard.exe/en?input=8811411&boardType=dep&time=18:30-60&date=<%= days.last[:conference_day].strftime('%d/%m/%Y') %>&start=yes">timetable for Etterbeek to Bruxelles midi on Sunday at 18:30</a>, takes 25min to Brussels South station, only a train every hour</li></ul></p>
 </p>
 
 <h3 id="parking">By car: parking</h3>
