--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -5,7 +5,7 @@ aliases: /sightseeing
 
 <div class="floating-image-container-left">
     <img src="asset:sightseeing-cathedral"/>
-    <span>&copy; <a href="http://creativecommons.org/licenses/by/2.0/" rel="license">CC-BY-2.0</a> by <a href="https://secure.flickr.com/photos/brighton/4424281095/">Jim Linwood</a></span>
+    <span>&copy; <a href="https://creativecommons.org/licenses/by/2.0/" rel="license">CC-BY-2.0</a> by <a href="https://secure.flickr.com/photos/brighton/4424281095/">Jim Linwood</a></span>
 </div>
 
 <% if ! @site.config.fetch(:virtual) %>
@@ -92,7 +92,7 @@ aliases: /sightseeing
 
 <div class="floating-image-container-right">
     <img src="asset:sightseeing-grandplace"/>
-    <span>&copy; <a href="http://creativecommons.org/licenses/by-sa/3.0/" rel="license">CC-BY-SA-3.0</a> by <a href="http://en.wikipedia.org/wiki/File:Maisons_Grand-Place_BXL_01.JPG">Ben2</a></span>
+    <span>&copy; <a href="https://creativecommons.org/licenses/by-sa/3.0/" rel="license">CC-BY-SA-3.0</a> by <a href="https://en.wikipedia.org/wiki/File:Maisons_Grand-Place_BXL_01.JPG">Ben2</a></span>
 </div>
 
 <p>
@@ -114,7 +114,7 @@ aliases: /sightseeing
 
 <div class="floating-image-container-left">
     <img src="asset:sightseeing-gallery"/>
-    <span>&copy; <a href="http://creativecommons.org/licenses/by-sa/2.0/" rel="license">CC-BY-SA-2.0</a> by <a href="https://secure.flickr.com/photos/johnkarakatsanis/4426286555/">John Karakatsanis</a></span>
+    <span>&copy; <a href="https://creativecommons.org/licenses/by-sa/2.0/" rel="license">CC-BY-SA-2.0</a> by <a href="https://secure.flickr.com/photos/johnkarakatsanis/4426286555/">John Karakatsanis</a></span>
 </div>
 
 <p>
