about: add basic info about FOSDEM vzw

--- a/content/about.html
+++ b/content/about.html
@@ -135,4 +135,10 @@ navtitle: About
       <li>...</li>
     </ul>
   </div>
+  <div class="text-block">
+    <h2 id="team">FOSDEM vzw</h2>
+    <p>
+      FOSDEM vzw is a Belgian non-profit. Its goal is to support the team organising the yearly FOSDEM conference.
+    </p>
+  </div>
 </div>
