--- a/content/faq.html
+++ b/content/faq.html
@@ -69,7 +69,7 @@ someone you know locally who is involved in the project and ask them to invite y
         <p>Attendance is free, including access to all talks and facilities.</p>
 
         <h4><span class="label label-info">Q:</span> If entrance to FOSDEM is free, who pays the expenses?</h4>
-        <p>We have two sources of income: <a href="page:/support/donate/">donations</a> from our visitors and <a href="page:/about/sponsors/">sponsorship</a>.</p>
+        <p>We have three sources of income: t-shirt sales, <a href="page:/support/donate/">donations</a> from our visitors and <a href="page:/about/sponsors/">sponsorship</a>.</p>
 
         <h4><span class="label label-info">Q:</span> My company loves FOSDEM, what are the sponsoring possibilities?</h4>
         <p>Have a look at the <a href="page:/about/sponsors/">sponsor</a> page.</p>
