Add matrix room to contact page

--- a/content/contact.html
+++ b/content/contact.html
@@ -11,7 +11,7 @@ title: Contact
 
 <p>
   You may also join us for a chat in
-  <a href="ircs://irc.libera.chat:6697/fosdem">the #fosdem channel on Libera.Chat</a>.
+  <a href="https://matrix.to/#/#fosdem:matrix.org">the #fosdem:matrix.org matrix room</a>.
 </p>
 
 
