tour fully booked

--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -10,6 +10,9 @@ aliases: /sightseeing
 
 <% if ! @site.config.fetch(:virtual) %>
 <p>
+  <b>Sorry, this year's tours are fully booked. You can still subscribe to the waiting list should someone have to cancel.</b>
+<p>
+<p>
   FOSDEM hires professional guides each year to offer free
   guided tours of Brussels to the spouses/partners of FOSDEM visitors.
   If your partner would like to accompany you to Brussels but is not interested
