Welcome to FOSDEM 2025

--- a/content/index.html
+++ b/content/index.html
@@ -16,6 +16,25 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
        <p>FOSDEM is a free event for software developers to meet, share ideas and collaborate. Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels.  You don't need to register.  Just turn up and join in!</p>
     </div>
 
+    <div class="text-block">
+      <h2>Schedule</h2>
+      <p>Navigate the <a href="page:/schedule/">schedule</a> on this website or using one of the <a href="page:/schedule/mobile/">mobile apps</a>.  We have again not
+ printed schedule booklets this year.  Rooms with popular talks might fill up.  When this happens, please don't queue outside or block the corridors.  Watch the <a href="page:/schedule/streaming">live stream</a> on your device or select an alternative talk and catch up later by watching the video afterwards.
+      </p>
+
+      <h2>Live Streaming and Chat</h2>
+      <p>Watch sessions online and interact using matrix.  Afterwards, videos will be uploaded and linked to the page for each talk.
+      </p>
+
+      <h2>T-shirts and Hoodies</h2>
+      <p>Purchase your hoodie or T-shirt from the Infodesks in the H and K buildings while stocks last!
+      </p>
+
+      <h2>Feedback</h2>
+      <p>Please use the links under each event to provide feedback to the speakers.  Send more general feedback - good as well as bad - to <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>. </p>
+
+    </div>
+
     <%
     # Depending on the height of the sponsors graphic, general announcements
     # (distinct from "news" by virtue of being undated) should either go here
