news: treasure hunt update
The things you do...

--- a/content/index.html
+++ b/content/index.html
@@ -24,9 +24,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
       </p>
 
       <h2>Live Streaming and Chat</h2>
-      <p>Watch sessions online and interact using
-        <a href="https://matrix.to/#/#fosdem2025:fosdem.org?web-instance[element.io]=chat.fosdem.org">matrix</a>.
-        Afterwards, videos will be uploaded and linked to the page for each talk.
+      <p>Watch sessions online and interact using matrix.  Afterwards, videos will be uploaded and linked to the page for each talk.
       </p>
 
       <h2>T-shirts and Hoodies</h2>
