added zev / Tatjana
Signed-off-by: Sebastian Schubert <basti@schubert.digital>

--- a/content/about.html
+++ b/content/about.html
@@ -110,6 +110,7 @@ navtitle: About
       <li>Pieter De Praetere</li>
       <li>Michael De Swert</li>
       <li>Philippe De Swert</li>
+      <li>Tatjana Dubrovica</li>
       <li>Christian Eisenhammer</li>
       <li>Koen Glotzbach</li>
       <li>Geert Goossens</li>
