--- a/content/index.html
+++ b/content/index.html
@@ -11,36 +11,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 %>
 
     <div class="text-block">
-<h1>FOSDEM 2025 is over</h1>
-    <p>...but not quite!  The treasure hunt still lies unsolved so why not give it a try now <a href="page:/news/2025-02-01-update-treasure-hunt">online</a>?</p>
-
-    </div>
-
-    <div class="text-block">
-
-    </div>
-
-    <div class="text-block">
-      <h2>Feedback</h2>
-      <p> Please let us know about your FOSDEM experience at 
-      <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.
-      All your feedback, good or bad, and suggestions for future years will be greatly appreciated.
-      Please use the links under each event to provide feedback to the speakers.  </p>
-
-      <h2>Videos</h2>
-      <p>We are adding a video of each talk to its web page when it is ready.  
-      See the <a href="https://review.video.fosdem.org/overview">processing status</a>
-      of individual talks.
-      <!--For everything available so far, look in the right-hand column of 
-	      the <a href="https://fosdem.org/2025/schedule/events/">complete schedule</a>, -->
-      or
-      download from <a href="https://video.fosdem.org/2025/">video.fosdem.org/2025</a>
-(arranged by room name).  
-     </p>
-    </div>
-
-    <div class="text-block">
-    <h2>FOSDEM</h2>
+    <h1>Welcome to FOSDEM 2026</h1>
        <p>FOSDEM is a free event for software developers to meet, share ideas and collaborate. Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels.  You don't need to register.  Just turn up and join in!</p>
     </div>
 
