removed abandoned social media fb and twitter and added bluesky

--- a/content/social.html
+++ b/content/social.html
@@ -7,7 +7,6 @@ navtitle: Social media
 
 <ul>
   <li><a rel="me" href="https://fosstodon.org/@fosdem">Mastodon</a></li>
-  <li><a href="https://twitter.com/fosdem">Twitter</a></li>
-  <li><a href="https://facebook.com/fosdem">Facebook</a></li>
   <li><a href="https://www.instagram.com/fosdem/">Instagram</a></li>
+  <li><a href="https://bsky.app/profile/fosdem.bsky.social">Bluesky</a></li>
 </ul>
