changing the url to our bluesky account since I updated our handle

--- a/content/social.html
+++ b/content/social.html
@@ -7,6 +7,6 @@ navtitle: Social media
 
 <ul>
   <li><a rel="me" href="https://fosstodon.org/@fosdem">Mastodon</a></li>
-  <li><a href="https://bsky.app/profile/fosdem.bsky.social">Bluesky</a></li>
+  <li><a href="https://bsky.app/profile/fosdem.org">Bluesky</a></li>
   <li><a href="https://www.linkedin.com/company/fosdem/">LinkedIn</a></li>
 </ul>
