fix: correct FAQ on CFP status

--- a/content/faq.html
+++ b/content/faq.html
@@ -19,7 +19,7 @@ navtitle: FAQ
 	<h3 id="cfp">CFP</h3>
 	<h4><span class="label label-info">Q:</span> When will the CFP open?</h4>
 	<p>
-	    The CFP has closed. Please keep an eye on our <a href="page:news">news</a> page or subscribe to our <a href="https://fosdem.org/rss.xml">RSS feed</a>.
+	    The CFP has not yet been opened. Please keep an eye on our <a href="page:news">news</a> page or subscribe to our <a href="https://fosdem.org/rss.xml">RSS feed</a>.
 	</p>
        	<h4><span class="label label-info">Q:</span> Why was our talk/developer room/stand rejected?</h4>
 	<p>
