Link back to schedule instead of Codeclub

--- a/content/junior.html
+++ b/content/junior.html
@@ -7,7 +7,7 @@ title: FOSDEM Junior
 </p>
 
 <p>
-  Please consider volunteering if you plan on attending. You can sign up as a volunteer on the <a href="https://codeclub.org/en/clubs/c0468f47-a1a4-43b6-b7f0-170a7d98b30c" target="_blank">Code Club profile</a>.
+Here you can find the <a href="../schedule/junior">FOSDEM Junior schedule</a> for this year.
 </p>
 
 
