--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -83,7 +83,7 @@ sponsors_under_navigation: true
 
 <h3 id="train">By train</h3>
 <p></p>
-<p><strong>Attention, visitors coming by train. The Belgian national railway company is planning <a href=https://www.belgiantrain.be/nl/travel-info/train-network-travel-info>a strike around the FOSDEM weekend</a>. This means less trains, not no trains. You may want to plan for this.</strong></p>
+<p><strong>Attention, visitors coming by train. The railway unions gave notice of <a href=https://www.belgiantrain.be/nl/travel-info/train-network-travel-info>a strike before the FOSDEM weekend</a>. A minimum service will be in place, but train frequency may be significantly reduced. You may want to plan for this and keep an eye on the linked page for up-to-date information.</strong></p>
 <p>From <strong>Brussels South</strong> (a.k.a. "<strong>Bruxelles Midi</strong>", "<strong>Brussel Zuid</strong>" or "<strong>Gare du Midi</strong>") Station (about <strong>30 minutes</strong>):
 <ul style="margin-top:0">
 <li>Take the <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&amp;_line=2&amp;_directioncode=F&amp;_mode=rt">Metro line 2</a>, direction Elisabeth</li>
@@ -107,7 +107,7 @@ sponsors_under_navigation: true
 </p>
 
 <h3 id="parking">By car: parking</h3>
-<p><strong>Attention, visitors coming from the east. The E40 motorway will be completely <a href="https://wegenenverkeer.be/werken/nieuwe-boogbrug-over-e40-bertem/actuele-hinder">closed off at Bertem from 20260130 until 20260202</a>. Plan for significant delays due to traffic jams.</strong></p>
+<p><strong>Attention, visitors coming from the East. The E40 motorway will be completely <a href="https://wegenenverkeer.be/werken/nieuwe-boogbrug-over-e40-bertem/actuele-hinder">closed off at Bertem from 20260130 until 20260202</a>. Plan for significant delays due to traffic jams.</strong></p>
 <p>
 If you come to FOSDEM by car, you can park your car on the campus.
 The <strong>main parking</strong> is located between Janson and the K building.
