Fix link to junior track

--- a/content/junior.html
+++ b/content/junior.html
@@ -7,7 +7,7 @@ title: FOSDEM Junior
 </p>
 
 <p>
-Here you can find the <a href="../schedule/junior">FOSDEM Junior schedule</a> for this year.
+Here you can find the <a href="../schedule/track/junior">FOSDEM Junior schedule</a> for this year.
 </p>
 
 
