add new Sailfish OS app

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -55,6 +55,10 @@ Ways to have the schedule with you at all times, without wasting trees.
 	<a href="https://gitlab.com/fabrixxm/harbour-fosdem-qml">Source code</a>,<br>
 	Available from the Sailfish Store.<br>
 </li>
+<li>Sailfish OS: FOSDEM Org (QML fork)<br>
+    <a href="https://codeberg.org/flypig/harbour-fosdem-org">Source code</a>,<br>
+    Available from <a href="https://sailfishos-chum.github.io/apps/harbour-fosdem-org/">Chum</a> and <a href="https://openrepos.net/content/flypig/fosdem-org">OpenRepos</a>.<br>
+</li>
 <li>GTK Mobile/Desktop: Confy<br>
     <a href="https://confy.kirgroup.net">Website and source code</a>,<br>
     Available in AUR for ArchLinux.<br>
