transportation: fix tram 25

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -50,7 +50,7 @@ sponsors_under_navigation: true
      title="STIB/MIVB - Tram 25">Tram 25</a>
 </strong></dt>
 <dd><ul>
-<li><strong>Direction: </strong>From <strong>Rogier</strong> (near <strong>Gare du Nord</strong>) towards <strong>Boondael Gare</strong></li>
+<li><strong>Direction: </strong>From <strong>Gare du Nord</strong> towards <strong>Boondael Gare</strong></li>
 <li><strong>Stop: </strong>ULB</li>
 </ul></dd>
 
