content: link to visit.brussels

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -174,7 +174,12 @@ If you need a taxi, we suggest calling Taxi Verts on
 </p>
 
 <hr>
-<h2>Related resources</h2>
+<h2 id="related">Related resources</h2>
+<div>
+<div style="margin-left: 20px; float: right;">
+	<a href="https://visit.brussels"><img src="asset:visitbrussels" alt="visit.brussels" /></a>
+	<p>Thanks to the support of <a href="https://visit.brussels">visit.brussels</a></p>
+</div>
 <ul>
 <li><a target="_blank" href="https://en.wikivoyage.org/wiki/Brussels#Get_in"
        title="Wikivoyage: How to get to Brussels">
@@ -192,6 +197,7 @@ If you need a taxi, we suggest calling Taxi Verts on
        title="STIB/MIVB: Airport Line">STIB/MIVB: Airport Line
       </a></li>
 </ul>
+</div>
 
 <hr>
 <h2>Maps</h2>
