--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -59,33 +59,36 @@ aliases: /sightseeing
 <div class="container-fluid">
 <div class="row-fluid">
 <div class="span6">
-
-<table class="table table-condensed table-striped table-bordered">
-  <thead>
-    <tr>
-      <th></th>
-      <th>Meeting point</th>
-      <th>Start</th>
-      <th>End</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>Saturday</th>
-      <td>Ground floor corridor inside <a href="https://nav.fosdem.org/l/sightseeing_tour_meeting">UD building</a></td>
-      <td>12:00</td>
-      <td>18:00</td>
-    </tr>
-    <tr>
-      <th>Sunday</th>
-      <td>Ground floor corridor inside <a href="https://nav.fosdem.org/l/sightseeing_tour_meeting">UD building</a></td>
-      <td>12:00</td>
-      <td>17:00</td>
-    </tr>
-  </tbody>
-</table>
-
-
+  <table class="table table-condensed table-striped table-bordered">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Meeting point</th>
+        <th>Start</th>
+        <th>End</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th>Saturday</th>
+        <td>Ground floor corridor inside <a href="https://nav.fosdem.org/l/sightseeing_tour_meeting">UD building</a></td>
+        <td>12:00</td>
+        <td>18:00</td>
+      </tr>
+      <tr>
+        <th>Sunday</th>
+        <td>Ground floor corridor inside <a href="https://nav.fosdem.org/l/sightseeing_tour_meeting">UD building</a></td>
+        <td>12:00</td>
+        <td>17:00</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<div class=span6>
+	<div class="floating-image-container-right">
+		<a href="https://visit.brussels"><img src="asset:visitbrussels" alt="visit.brussels" /></a>
+		<p>Discover all the cultural and tourist attractions in the area on <a href="https://visit.brussels">visit.brussels</a></p>
+	</div>
 </div>
 </div>
 </div>
