schedule: comment out amendments link

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -31,7 +31,7 @@ columns = 3
   <li>Overview of <a href="<%= pathof '/schedule/roomtracks/' %>">rooms per days</a></li>
   <li>Mobile apps: <a href="<%= pathof '/schedule/mobile/' %>">many platforms</a></li>
   <li>What's on now: <a href="page:/schedule/streaming">Live streaming</a></li>
-  <li>Programme <a href="page:/schedule/amendments">Schedule amendments</a></li>
+  <%# <li>Programme <a href="page:/schedule/amendments">Schedule amendments</a></li> %>
 <%
   pdfs = items.select{|x| x.identifier =~ %r{^/schedule/pdf/[^/]+/$}}.sort_by{|x| x[:page_size]}.reverse
   unless pdfs.empty?
