Adds kurbelfahrplan to mobile app list
https://captnemo.in/kurbelfahrplan/

Works on the Playdate

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -63,6 +63,9 @@ Ways to have the schedule with you at all times, without wasting trees.
     <a href="https://confy.kirgroup.net">Website and source code</a>,<br>
     Available in AUR for ArchLinux.<br>
 </li>
+<li>Playdate: Kurbelfahrplan<br>
+	<a href="https://captnemo.in/kurbelfahrplan/">Website</a> and <a href="https://codeberg.org/captn3m0/kurbelfahrplan">source code</a>.
+</li>
 </ul>
 
 <p>
