fix mailing list

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -69,7 +69,7 @@ Ways to have the schedule with you at all times, without wasting trees.
 </ul>
 
 <p>
-Others? Or tested one of the below for this year? Let us know on our mailinglist: <a href="mailto:fosdem@lists.fosdem.org">apps@lists.fosdem.org</a>.
+Others? Or tested one of the below for this year? Let us know on our mailinglist: <a href="mailto:apps@lists.fosdem.org">apps@lists.fosdem.org</a>.
 </p>
 
 <hr>
