content: prettify transportation

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -107,7 +107,7 @@ sponsors_under_navigation: true
 </p>
 
 <h3 id="parking">By car: parking</h3>
-<p><strong>Attention, visitors coming from the East. The E40 motorway will be completely <a href="https://wegenenverkeer.be/werken/nieuwe-boogbrug-over-e40-bertem/actuele-hinder">closed off at Bertem from 20260130 until 20260202</a>. Plan for significant delays due to traffic jams.</strong></p>
+<p><strong>Attention, visitors coming from the East. The E40 motorway will be completely <a href="https://wegenenverkeer.be/werken/nieuwe-boogbrug-over-e40-bertem/actuele-hinder">closed off at Bertem from 2026-01-30 until 2026-02-02</a>. Plan for significant delays due to traffic jams.</strong></p>
 <p>
 If you come to FOSDEM by car, you can park your car on the campus.
 The <strong>main parking</strong> is located between Janson and the K building.
@@ -118,9 +118,9 @@ Note: There is <strong>no entrance</strong> from Av. Adolphe Buyl.
 <p>
 An <strong>additional parking</strong> on the campus is available next
 to the U building at Av. Antoine Depage. Note that this is a one-way
-street, only accessible from Av. Franklin Roosevelt as well.
+street, only accessible from Av. Franklin Roosevelt.
 </p>
-<img style="float: right; text-align: right" src="asset:bluezone" alt="Traffic sign: blue zone" title="Traffic sign: blue zone"}>
+<img style="float: right; text-align: right; margin-left: 30px;" src="asset:bluezone" alt="Traffic sign: blue zone" title="Traffic sign: blue zone"}>
 <p>
 You can park on the campus at your own risk.
 Do not leave any valuables in your car!
@@ -135,14 +135,14 @@ direction Roodebeek.
 Then follow the <a href="#bus">instructions above</a>.
 </p>
 <p>
-Be aware that most streets directly surrounding the ULB campus are in a
-so-called 'blue zone'. Parking in the blue zone is free, but limited to
-a maximum of two hours on Monday - Saturday. Use of a parking disc
-displaying the arrival time is mandatory here. The picture on the right
-shows one of the signs that may be used to indicate this blue zone.
-These signs are placed on the zone edges, so not repeated on every
-street inside the zone. Other nearby streets are in paid parking zones:
-check where you park your car.
+Please note that most streets surrounding the ULB campus are located in a
+so-called blue zone. Parking in blue zones is free but limited to a maximum of
+two hours from Monday to Saturday. A parking disc indicating your arrival time
+is mandatory.<br />
+The image on the right shows one of the signs used to mark a blue zone. These
+signs are placed at the zone's boundaries and are therefore not repeated on
+every street within the zone. Nearby streets may fall under paid parking
+regulations, so be sure to check before leaving your car.
 </p>
 <p>
 As of 2018, the ULB campus Solbosch is within the Brussels Low Emissions
