updated layouts to include the timezone of the events
Signed-off-by: Sebastian Schubert <basti@schubert.digital>

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -122,7 +122,7 @@ columns = 3
       <th>Title</th>
       <th>Speaker(s)</th>
       <th>Day</th>
-      <th>When</th>
+      <th>When (UTC+1)</th>
       <th>Room</th>
     </tr>
   </thead>
