--- a/content/schedule/rooms.html
+++ b/content/schedule/rooms.html
@@ -5,7 +5,7 @@ sponsors_under_navigation: true
 <%
 # vim: set ts=2 sw=2 et ai ft=eruby:
 %>
-<p>All times are CET (UTC+1, Brussels time).</p>
+<p>All times are <b>CET (UTC+1)</b>.</p>
 <p>An overview of <a href="<%= $item_by_id.fetch('/schedule/roomtracks/').path %>">room occupation by track</a> is available, too.</p>
 
 <h2>Rooms Live in Brussels</h2>
