--- a/content/schedule/tracks.html
+++ b/content/schedule/tracks.html
@@ -25,7 +25,7 @@ categories = [
 	    <th>Call For<br /> Papers</th>
             <th>Rooms</th>
             <% days.each do |d| %>
-            <th><%= d[:title] %></th>
+            <th><%= d[:title] %> (UTC+1)</th>
             <% end %>
         </tr>
     </thead>
