--- a/content/schedule/roomtracks.html
+++ b/content/schedule/roomtracks.html
@@ -2,7 +2,7 @@
 title: Room occupation by track
 sponsors_under_navigation: true
 ---
-<p>All times are CET (UTC+1, Brussels time). For a less graphical and colorful overview of the rooms and the tracks that are held in them, respectively, you may <a href="<%= pathof '/schedule/rooms/' %>">look at this page instead</a>.
+<p>All times are <b>CET (UTC+1)</b>. For a less graphical and colorful overview of the rooms and the tracks that are held in them, respectively, you may <a href="<%= pathof '/schedule/rooms/' %>">look at this page instead</a>.
 <%
 # vim: set ft=eruby ts=2 sw=2 et ai:
 
