--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -14,6 +14,9 @@ Ways to have the schedule with you at all times, without wasting trees.
 <li><a href="https://fosdem.sojourner.rocks">Sojourner</a><br>
     <a href="https://github.com/loomchild/sojourner-web">Source code</a>
 </li>
+<li><a href="https://app.skedz.org/?url=https://cors.skedz.org/https://fosdem.org/2026/schedule/xml">Skedz</a><br>
+    <a href="https://github.com/ysorge/skedz">Source code</a>
+</li>
 </ul>
 
 <h3>Android</h3>
