add FOSDEM Schedule viewer

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -16,6 +16,10 @@ Ways to have the schedule with you at all times, without wasting trees.
 </li>
 <li><a href="https://app.skedz.org/?url=https://cors.skedz.org/https://fosdem.org/2026/schedule/xml">Skedz</a><br>
     <a href="https://github.com/ysorge/skedz">Source code</a>
+</li>w
+<li>
+	<a href="https://rgbcu.be/dump/fosdem/2026">FOSDEM 2026 Schedule Viewer</a>
+	<a href="https://github.com/RGBCube/site/blob/master/site/dump/fosdem/_fosdem.tsx">Source code</a>
 </li>
 </ul>
 
