--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -18,7 +18,7 @@ Ways to have the schedule with you at all times, without wasting trees.
     <a href="https://github.com/ysorge/skedz">Source code</a>
 </li>
 <li>
-	<a href="https://rgbcu.be/dump/fosdem/2026">FOSDEM 2026 Schedule Planner</a>
+	<a href="https://rgbcu.be/dump/fosdem/2026">FOSDEM 2026 Schedule Planner</a></br>
 	<a href="https://github.com/RGBCube/site/blob/master/site/dump/fosdem/_fosdem.tsx">Source code</a>
 </li>
 </ul>
