transportation: add visit.brussels link

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -81,6 +81,8 @@ sponsors_under_navigation: true
 
 </dl>
 
+<p>Thanks to the support of <a href="https://www.visit.brussels/en/professionals/meet/convention-bureau/brussels-welcome-support"><img src="visitbrussels.png" /></a>.</p>
+
 <h3 id="train">By train</h3>
 <p></p>
 <p><strong>Attention, visitors coming by train. The railway unions gave notice of <a href=https://www.belgiantrain.be/nl/travel-info/train-network-travel-info>a strike before the FOSDEM weekend</a>. A minimum service will be in place, but train frequency may be significantly reduced. You may want to plan for this and keep an eye on the linked page for up-to-date information.</strong></p>
