add visit.brussels link

--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -128,5 +128,7 @@ aliases: /sightseeing
   mail <a href="mailto:tour@fosdem.org">tour@fosdem.org</a>.
 </p>
 
+<p>Discover all the cultural and tourist attractions in the area through <a href="https://www.visit.brussels/en/visitors">visit.brussels</a>.</p>
+
 <% end %>
 <br style="clear:both;"/>
