--- a/content/practical/accessibility.html
+++ b/content/practical/accessibility.html
@@ -6,14 +6,27 @@ title: Accessibility
 %>
 
 <p>
-  FOSDEM welcomes all free software and open source developers!  While
-  we don't own the university campus and have little control over its
-  accessibility, we have tried to find ways for developers with
-  physical limitations to make the most of the event.
+  FOSDEM welcomes all free software and open source developers! While we
+  don't own the university campus and have little control over its
+  accessibility, we know there is still significant work to be done to
+  make FOSDEM accessible to everyone. We are committed to improving both
+  the on site and online experience, and we need the community’s help to
+  do that.
 </p>
 
 <p>
-  Wheelchair accessible routes and toilets can be found through <a href='https://nav.fosdem.org'>nav.fosdem.org</a> (hint: search for "wheelchair" and use the "avoid stairs" navigation setting). All rooms apart from the upper rooms in AW are weelchair accessible. A static map of the campus is available <a href="https://www.ulb.be/fr/accessibilite-pour-tous/amenagements-specifiques">here</a>.
+  For digital participation, our goal is to meet WCAG 2.2 AA, the current
+  best open standard for digital accessibility and inclusion. We are not
+  there yet, but this is the standard we are actively working toward.
+</p>
+
+<p>
+  Wheelchair accessible routes and toilets can be found through
+  <a href='https://nav.fosdem.org'>nav.fosdem.org</a>
+  (hint: search for "wheelchair" and use the "avoid stairs" navigation
+  setting). All rooms apart from the upper rooms in AW are wheelchair
+  accessible. A static map of the campus is available
+  <a href="https://www.ulb.be/fr/accessibilite-pour-tous/amenagements-specifiques">here</a>.
 </p>
 
 <p>
@@ -21,15 +34,25 @@ title: Accessibility
 </p>
 
 <p>
-  Front seating for those with hearing or sight challenges is available on a best effort basis.
+  The community should be mindful of the needs of others and ensure that people with disabilities 
+  have priority to sit in the front.
 </p>
 
 <p>
-  We realise some people on the autism spectrum might need some quiet time. While we cannot offer that on campus, we suggest <a href='https://www.openstreetmap.org/way/150213167'>Bois de La Cambre/Terkamerenbos</a>, only a five minute walk away.
+  We realise some people on the autism spectrum might need some quiet
+  time. While we cannot offer a dedicated quiet space on campus, we
+  suggest
+  <a href='https://www.openstreetmap.org/way/150213167'>Bois de La Cambre/Terkamerenbos</a>,
+  only a five minute walk away.
 </p>
 
 <h3>Suggestions welcome</h3>
 <p>
-  We welcome your ideas for improving accessibility at FOSDEM. Please
-  email them to <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.
+  Accessibility at FOSDEM is a shared responsibility. If you encounter
+  barriers or have ideas for improvements, please let us know so we can
+  prioritise what to fix next. You can email
+  <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>, or propose
+  improvements directly by opening issues or pull requests on the
+  <a href="https://github.com/FOSDEM/website/">FOSDEM website repository
+  on GitHub</a>.
 </p>
